--- a/bsp/stm32/stm32f103-atn-chkgv2/board/SConscript
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/SConscript
@@ -18,6 +18,9 @@ if GetDepend(['BSP_USING_ETH']):
 if GetDepend(['BSP_USING_SPI_FLASH']):
     src += Glob('ports/spi_flash_init.c')
 
+if GetDepend(['FAL_USING_SFUD_PORT']):
+    src += Glob('ports/fal_flash_sfud_port.c')
+
 if GetDepend(['BSP_USING_SDCARD']):
     src += Glob('ports/sdcard_port.c')
 
