--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -78,10 +78,6 @@ CONFIG_RT_CONSOLEBUF_SIZE=128
 CONFIG_RT_CONSOLE_DEVICE_NAME="uart1"
 CONFIG_RT_VER_NUM=0x50001
 # CONFIG_RT_USING_STDC_ATOMIC is not set
-
-#
-# RT-Thread Architecture
-#
 # CONFIG_RT_USING_CACHE is not set
 CONFIG_RT_USING_HW_ATOMIC=y
 # CONFIG_ARCH_ARM_BOOTWITH_FLUSH_CACHE is not set
@@ -414,7 +410,28 @@ CONFIG_RT_LIBC_DEFAULT_TIMEZONE=8
 # tools packages
 #
 # CONFIG_PKG_USING_CMBACKTRACE is not set
-# CONFIG_PKG_USING_EASYFLASH is not set
+CONFIG_PKG_USING_EASYFLASH=y
+CONFIG_PKG_EASYFLASH_PATH="/packages/tools/EasyFlash"
+CONFIG_PKG_EASYFLASH_ENV=y
+# CONFIG_PKG_EASYFLASH_ENV_AUTO_UPDATE is not set
+# CONFIG_PKG_EASYFLASH_LOG is not set
+# CONFIG_PKG_EASYFLASH_IAP is not set
+CONFIG_PKG_EASYFLASH_ERASE_GRAN=4096
+CONFIG_PKG_EASYFLASH_WRITE_GRAN_1BIT=y
+# CONFIG_PKG_EASYFLASH_WRITE_GRAN_8BITS is not set
+# CONFIG_PKG_EASYFLASH_WRITE_GRAN_32BITS is not set
+CONFIG_PKG_EASYFLASH_WRITE_GRAN=1
+CONFIG_PKG_EASYFLASH_START_ADDR=0
+CONFIG_PKG_EASYFLASH_DEBUG=y
+CONFIG_PKG_USING_EASYFLASH_V410=y
+# CONFIG_PKG_USING_EASYFLASH_V400 is not set
+# CONFIG_PKG_USING_EASYFLASH_V330 is not set
+# CONFIG_PKG_USING_EASYFLASH_V321 is not set
+# CONFIG_PKG_USING_EASYFLASH_V310 is not set
+# CONFIG_PKG_USING_EASYFLASH_V300 is not set
+# CONFIG_PKG_USING_EASYFLASH_LATEST_VERSION is not set
+CONFIG_PKG_EASYFLASH_VER="v4.1.0"
+CONFIG_PKG_EASYFLASH_VER_NUM=0x40100
 # CONFIG_PKG_USING_EASYLOGGER is not set
 # CONFIG_PKG_USING_SYSTEMVIEW is not set
 # CONFIG_PKG_USING_SEGGER_RTT is not set
