[bsp/chkgv2] add ulog_easyflash support

--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -149,7 +149,9 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
 # CONFIG_RT_USING_FDT is not set
-# CONFIG_RT_USING_RTC is not set
+CONFIG_RT_USING_RTC=y
+# CONFIG_RT_USING_ALARM is not set
+CONFIG_RT_USING_SOFT_RTC=y
 # CONFIG_RT_USING_SDIO is not set
 CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_SPI_BITOPS is not set
@@ -221,7 +223,32 @@ CONFIG_RT_LIBC_DEFAULT_TIMEZONE=8
 # Utilities
 #
 # CONFIG_RT_USING_RYM is not set
-# CONFIG_RT_USING_ULOG is not set
+CONFIG_RT_USING_ULOG=y
+# CONFIG_ULOG_OUTPUT_LVL_A is not set
+# CONFIG_ULOG_OUTPUT_LVL_E is not set
+# CONFIG_ULOG_OUTPUT_LVL_W is not set
+# CONFIG_ULOG_OUTPUT_LVL_I is not set
+CONFIG_ULOG_OUTPUT_LVL_D=y
+CONFIG_ULOG_OUTPUT_LVL=7
+# CONFIG_ULOG_USING_ISR_LOG is not set
+CONFIG_ULOG_ASSERT_ENABLE=y
+CONFIG_ULOG_LINE_BUF_SIZE=128
+# CONFIG_ULOG_USING_ASYNC_OUTPUT is not set
+
+#
+# log format
+#
+# CONFIG_ULOG_OUTPUT_FLOAT is not set
+CONFIG_ULOG_USING_COLOR=y
+CONFIG_ULOG_OUTPUT_TIME=y
+CONFIG_ULOG_TIME_USING_TIMESTAMP=y
+CONFIG_ULOG_OUTPUT_LEVEL=y
+CONFIG_ULOG_OUTPUT_TAG=y
+# CONFIG_ULOG_OUTPUT_THREAD_NAME is not set
+CONFIG_ULOG_BACKEND_USING_CONSOLE=y
+# CONFIG_ULOG_BACKEND_USING_FILE is not set
+# CONFIG_ULOG_USING_FILTER is not set
+# CONFIG_ULOG_USING_SYSLOG is not set
 # CONFIG_RT_USING_UTEST is not set
 # CONFIG_RT_USING_VAR_EXPORT is not set
 # CONFIG_RT_USING_RESOURCE_ID is not set
@@ -414,8 +441,9 @@ CONFIG_PKG_USING_EASYFLASH=y
 CONFIG_PKG_EASYFLASH_PATH="/packages/tools/EasyFlash"
 CONFIG_PKG_EASYFLASH_ENV=y
 # CONFIG_PKG_EASYFLASH_ENV_AUTO_UPDATE is not set
-# CONFIG_PKG_EASYFLASH_LOG is not set
-# CONFIG_PKG_EASYFLASH_IAP is not set
+CONFIG_PKG_EASYFLASH_LOG=y
+CONFIG_PKG_EASYFLASH_LOG_AREA_SIZE=516096
+CONFIG_PKG_EASYFLASH_IAP=y
 CONFIG_PKG_EASYFLASH_ERASE_GRAN=4096
 CONFIG_PKG_EASYFLASH_WRITE_GRAN_1BIT=y
 # CONFIG_PKG_EASYFLASH_WRITE_GRAN_8BITS is not set
@@ -423,21 +451,27 @@ CONFIG_PKG_EASYFLASH_WRITE_GRAN_1BIT=y
 CONFIG_PKG_EASYFLASH_WRITE_GRAN=1
 CONFIG_PKG_EASYFLASH_START_ADDR=0
 CONFIG_PKG_EASYFLASH_DEBUG=y
-CONFIG_PKG_USING_EASYFLASH_V410=y
+# CONFIG_PKG_USING_EASYFLASH_V410 is not set
 # CONFIG_PKG_USING_EASYFLASH_V400 is not set
 # CONFIG_PKG_USING_EASYFLASH_V330 is not set
 # CONFIG_PKG_USING_EASYFLASH_V321 is not set
 # CONFIG_PKG_USING_EASYFLASH_V310 is not set
 # CONFIG_PKG_USING_EASYFLASH_V300 is not set
-# CONFIG_PKG_USING_EASYFLASH_LATEST_VERSION is not set
-CONFIG_PKG_EASYFLASH_VER="v4.1.0"
-CONFIG_PKG_EASYFLASH_VER_NUM=0x40100
+CONFIG_PKG_USING_EASYFLASH_LATEST_VERSION=y
+CONFIG_PKG_EASYFLASH_VER="latest"
+CONFIG_PKG_EASYFLASH_VER_NUM=0x99999
 # CONFIG_PKG_USING_EASYLOGGER is not set
 # CONFIG_PKG_USING_SYSTEMVIEW is not set
 # CONFIG_PKG_USING_SEGGER_RTT is not set
 # CONFIG_PKG_USING_RTT_AUTO_EXE_CMD is not set
 # CONFIG_PKG_USING_RDB is not set
-# CONFIG_PKG_USING_ULOG_EASYFLASH is not set
+CONFIG_PKG_USING_ULOG_EASYFLASH=y
+CONFIG_PKG_ULOG_EASYFLASH_PATH="/packages/tools/ulog_easyflash"
+CONFIG_ULOG_EASYFLASH_BACKEND_ENABLE=y
+# CONFIG_PKG_USING_ULOG_EASYFLASH_V00200 is not set
+# CONFIG_PKG_USING_ULOG_EASYFLASH_V00100 is not set
+CONFIG_PKG_USING_ULOG_EASYFLASH_LATEST_VERSION=y
+CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 # CONFIG_PKG_USING_LOGMGR is not set
 # CONFIG_PKG_USING_ADBD is not set
 # CONFIG_PKG_USING_COREMARK is not set
