--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -222,7 +222,8 @@ CONFIG_RT_LIBC_DEFAULT_TIMEZONE=8
 #
 # Utilities
 #
-# CONFIG_RT_USING_RYM is not set
+CONFIG_RT_USING_RYM=y
+# CONFIG_YMODEM_USING_CRC_TABLE is not set
 CONFIG_RT_USING_ULOG=y
 # CONFIG_ULOG_OUTPUT_LVL_A is not set
 # CONFIG_ULOG_OUTPUT_LVL_E is not set
@@ -322,7 +323,15 @@ CONFIG_ULOG_BACKEND_USING_CONSOLE=y
 # CONFIG_PKG_USING_IOTSHARP_SDK is not set
 # CONFIG_PKG_USING_NIMBLE is not set
 # CONFIG_PKG_USING_LLSYNC_SDK_ADAPTER is not set
-# CONFIG_PKG_USING_OTA_DOWNLOADER is not set
+CONFIG_PKG_USING_OTA_DOWNLOADER=y
+CONFIG_PKG_OTA_DOWNLOADER_PATH="/packages/iot/ota_downloader"
+CONFIG_OTA_DOWNLOADER_DEBUG=y
+# CONFIG_PKG_USING_HTTP_OTA is not set
+CONFIG_PKG_USING_YMODEM_OTA=y
+# CONFIG_PKG_USING_OTA_DOWNLOADER_V010 is not set
+# CONFIG_PKG_USING_OTA_DOWNLOADER_V100 is not set
+CONFIG_PKG_USING_OTA_DOWNLOADER_LATEST_VERSION=y
+CONFIG_PKG_OTA_DOWNLOADER_VER="latest"
 # CONFIG_PKG_USING_IPMSG is not set
 # CONFIG_PKG_USING_LSSDP is not set
 # CONFIG_PKG_USING_AIRKISS_OPEN is not set
