--- a/bsp/stm32/stm32f103-atn-chkgv2/board/SConscript
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/SConscript
@@ -10,6 +10,7 @@ cwd = GetCurrentDir()
 src = Split('''
 board.c
 CubeMX_Config/Src/stm32f1xx_hal_msp.c
+src/usr_init.c
 ''')
 
 if GetDepend(['BSP_USING_ETH']):
@@ -27,6 +28,7 @@ if GetDepend(['BSP_USING_SDCARD']):
 path =  [cwd]
 path += [cwd + '/CubeMX_Config/Inc']
 path += [cwd + '/ports']
+path += [cwd + '/inc']
 
 startup_path_prefix = SDK_LIB
 
