[bsp/chkgv2] remove debug information for fal and sfud

--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -153,8 +153,8 @@ CONFIG_RT_USING_DFS_DEVFS=y
 # CONFIG_RT_USING_DFS_TMPFS is not set
 # CONFIG_RT_USING_DFS_MQUEUE is not set
 CONFIG_RT_USING_FAL=y
-CONFIG_FAL_DEBUG_CONFIG=y
-CONFIG_FAL_DEBUG=1
+# CONFIG_FAL_DEBUG_CONFIG is not set
+CONFIG_FAL_DEBUG=0
 CONFIG_FAL_PART_HAS_TABLE_CFG=y
 CONFIG_FAL_USING_SFUD_PORT=y
 CONFIG_FAL_USING_NOR_FLASH_DEV_NAME="W25Q16"
@@ -199,7 +199,7 @@ CONFIG_RT_SFUD_USING_SFDP=y
 CONFIG_RT_SFUD_USING_FLASH_INFO_TABLE=y
 # CONFIG_RT_SFUD_USING_QSPI is not set
 CONFIG_RT_SFUD_SPI_MAX_HZ=50000000
-CONFIG_RT_DEBUG_SFUD=y
+# CONFIG_RT_DEBUG_SFUD is not set
 # CONFIG_RT_USING_ENC28J60 is not set
 # CONFIG_RT_USING_SPI_WIFI is not set
 # CONFIG_RT_USING_WDT is not set
