[bsp/chkgv2] add pwm driver for fan

--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -181,7 +181,7 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_NULL is not set
 # CONFIG_RT_USING_ZERO is not set
 # CONFIG_RT_USING_RANDOM is not set
-# CONFIG_RT_USING_PWM is not set
+CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_MTD_NOR is not set
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
@@ -1116,6 +1116,7 @@ CONFIG_BSP_USING_USB_TO_USART=y
 CONFIG_BSP_USING_SPI_FLASH=y
 # CONFIG_BSP_USING_NAND1 is not set
 # CONFIG_BSP_USING_RGB is not set
+CONFIG_BSP_USING_FAN=y
 # CONFIG_BSP_USING_POT is not set
 # CONFIG_BSP_USING_EEPROM is not set
 # CONFIG_BSP_USING_ETH is not set
@@ -1139,7 +1140,12 @@ CONFIG_BSP_USING_SPI1=y
 # CONFIG_BSP_USING_SPI3 is not set
 # CONFIG_BSP_USING_I2C1 is not set
 # CONFIG_BSP_USING_TIM is not set
-# CONFIG_BSP_USING_PWM is not set
+CONFIG_BSP_USING_PWM=y
+CONFIG_BSP_USING_PWM3=y
+CONFIG_BSP_USING_PWM3_CH1=y
+# CONFIG_BSP_USING_PWM3_CH2 is not set
+# CONFIG_BSP_USING_PWM3_CH3 is not set
+# CONFIG_BSP_USING_PWM3_CH4 is not set
 # CONFIG_BSP_USING_ADC is not set
 CONFIG_BSP_USING_ONCHIP_RTC=y
 # CONFIG_BSP_RTC_USING_LSE is not set
