[bsp/chkgv2] add uart3 and cat1 gpio support

--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -1113,6 +1113,7 @@ CONFIG_SOC_STM32F103RE=y
 #
 CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_RS485_OR_RS232 is not set
+CONFIG_BSP_USING_AT_CAT1=y
 CONFIG_BSP_USING_SPI_FLASH=y
 # CONFIG_BSP_USING_NAND1 is not set
 # CONFIG_BSP_USING_RGB is not set
@@ -1130,7 +1131,8 @@ CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_UART1_RX_USING_DMA is not set
 # CONFIG_BSP_USING_UART2 is not set
-# CONFIG_BSP_USING_UART3 is not set
+CONFIG_BSP_USING_UART3=y
+# CONFIG_BSP_UART3_RX_USING_DMA is not set
 CONFIG_BSP_USING_ON_CHIP_FLASH=y
 CONFIG_BSP_USING_SPI=y
 CONFIG_BSP_USING_SPI1=y
