[bsp/chkgv2] add at device of ec200

--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -164,7 +164,9 @@ CONFIG_FAL_USING_NOR_FLASH_DEV_NAME="W25Q16"
 #
 CONFIG_RT_USING_DEVICE_IPC=y
 CONFIG_RT_UNAMED_PIPE_NUMBER=64
-# CONFIG_RT_USING_SYSTEM_WORKQUEUE is not set
+CONFIG_RT_USING_SYSTEM_WORKQUEUE=y
+CONFIG_RT_SYSTEM_WORKQUEUE_STACKSIZE=2048
+CONFIG_RT_SYSTEM_WORKQUEUE_PRIORITY=23
 CONFIG_RT_USING_SERIAL=y
 CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_USING_SERIAL_V2 is not set
@@ -229,7 +231,16 @@ CONFIG_RT_LIBC_DEFAULT_TIMEZONE=8
 #
 # POSIX (Portable Operating System Interface) layer
 #
-# CONFIG_RT_USING_POSIX_FS is not set
+CONFIG_RT_USING_POSIX_FS=y
+# CONFIG_RT_USING_POSIX_DEVIO is not set
+# CONFIG_RT_USING_POSIX_STDIO is not set
+CONFIG_RT_USING_POSIX_POLL=y
+CONFIG_RT_USING_POSIX_SELECT=y
+# CONFIG_RT_USING_POSIX_EVENTFD is not set
+# CONFIG_RT_USING_POSIX_SOCKET is not set
+# CONFIG_RT_USING_POSIX_TERMIOS is not set
+# CONFIG_RT_USING_POSIX_AIO is not set
+# CONFIG_RT_USING_POSIX_MMAN is not set
 # CONFIG_RT_USING_POSIX_DELAY is not set
 # CONFIG_RT_USING_POSIX_CLOCK is not set
 # CONFIG_RT_USING_POSIX_TIMER is not set
@@ -251,10 +262,38 @@ CONFIG_RT_LIBC_DEFAULT_TIMEZONE=8
 #
 # Network
 #
-# CONFIG_RT_USING_SAL is not set
-# CONFIG_RT_USING_NETDEV is not set
+CONFIG_RT_USING_SAL=y
+CONFIG_SAL_INTERNET_CHECK=y
+
+#
+# Docking with protocol stacks
+#
+# CONFIG_SAL_USING_LWIP is not set
+CONFIG_SAL_USING_AT=y
+# CONFIG_SAL_USING_TLS is not set
+CONFIG_SAL_USING_POSIX=y
+# CONFIG_SAL_USING_AF_UNIX is not set
+CONFIG_RT_USING_NETDEV=y
+CONFIG_NETDEV_USING_IFCONFIG=y
+CONFIG_NETDEV_USING_PING=y
+CONFIG_NETDEV_USING_NETSTAT=y
+CONFIG_NETDEV_USING_AUTO_DEFAULT=y
+# CONFIG_NETDEV_USING_IPV6 is not set
+CONFIG_NETDEV_IPV4=1
+CONFIG_NETDEV_IPV6=0
+# CONFIG_NETDEV_IPV6_SCOPES is not set
 # CONFIG_RT_USING_LWIP is not set
-# CONFIG_RT_USING_AT is not set
+CONFIG_RT_USING_AT=y
+CONFIG_AT_DEBUG=y
+# CONFIG_AT_USING_SERVER is not set
+CONFIG_AT_USING_CLIENT=y
+CONFIG_AT_CLIENT_NUM_MAX=1
+CONFIG_AT_USING_SOCKET=y
+# CONFIG_AT_USING_SOCKET_SERVER is not set
+CONFIG_AT_USING_CLI=y
+# CONFIG_AT_PRINT_RAW_CMD is not set
+CONFIG_AT_CMD_MAX_LEN=128
+CONFIG_AT_SW_VERSION_NUM=0x10301
 
 #
 # Utilities
@@ -341,7 +380,42 @@ CONFIG_ULOG_BACKEND_USING_CONSOLE=y
 # CONFIG_PKG_USING_NETUTILS is not set
 # CONFIG_PKG_USING_CMUX is not set
 # CONFIG_PKG_USING_PPP_DEVICE is not set
-# CONFIG_PKG_USING_AT_DEVICE is not set
+CONFIG_PKG_USING_AT_DEVICE=y
+CONFIG_PKG_AT_DEVICE_PATH="/packages/iot/at_device"
+# CONFIG_AT_DEVICE_USING_M26 is not set
+# CONFIG_AT_DEVICE_USING_EC20 is not set
+# CONFIG_AT_DEVICE_USING_ESP32 is not set
+# CONFIG_AT_DEVICE_USING_ESP8266 is not set
+# CONFIG_AT_DEVICE_USING_RW007 is not set
+# CONFIG_AT_DEVICE_USING_SIM800C is not set
+# CONFIG_AT_DEVICE_USING_SIM76XX is not set
+# CONFIG_AT_DEVICE_USING_MW31 is not set
+# CONFIG_AT_DEVICE_USING_W60X is not set
+# CONFIG_AT_DEVICE_USING_A9G is not set
+# CONFIG_AT_DEVICE_USING_BC26 is not set
+# CONFIG_AT_DEVICE_USING_AIR720 is not set
+# CONFIG_AT_DEVICE_USING_ME3616 is not set
+# CONFIG_AT_DEVICE_USING_M6315 is not set
+# CONFIG_AT_DEVICE_USING_BC28 is not set
+CONFIG_AT_DEVICE_USING_EC200X=y
+CONFIG_AT_DEVICE_EC200X_INIT_ASYN=y
+CONFIG_AT_DEVICE_EC200X_SOCKET=y
+# CONFIG_AT_DEVICE_EC200X_SAMPLE is not set
+# CONFIG_AT_DEVICE_USING_N21 is not set
+# CONFIG_AT_DEVICE_USING_N58 is not set
+# CONFIG_AT_DEVICE_USING_M5311 is not set
+# CONFIG_AT_DEVICE_USING_L610 is not set
+# CONFIG_AT_DEVICE_USING_N720 is not set
+# CONFIG_AT_DEVICE_USING_ML305 is not set
+# CONFIG_PKG_USING_AT_DEVICE_V210 is not set
+# CONFIG_PKG_USING_AT_DEVICE_V204 is not set
+# CONFIG_PKG_USING_AT_DEVICE_V203 is not set
+# CONFIG_PKG_USING_AT_DEVICE_V202 is not set
+# CONFIG_PKG_USING_AT_DEVICE_V201 is not set
+# CONFIG_PKG_USING_AT_DEVICE_V200 is not set
+CONFIG_PKG_USING_AT_DEVICE_LATEST_VERSION=y
+CONFIG_PKG_AT_DEVICE_VER="latest"
+CONFIG_PKG_AT_DEVICE_VER_NUM=0x99999
 # CONFIG_PKG_USING_ATSRV_SOCKET is not set
 # CONFIG_PKG_USING_WIZNET is not set
 # CONFIG_PKG_USING_ZB_COORDINATOR is not set
@@ -1114,6 +1188,13 @@ CONFIG_SOC_STM32F103RE=y
 CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_RS485_OR_RS232 is not set
 CONFIG_BSP_USING_AT_CAT1=y
+CONFIG_EC200X_CLIENT_NAME="uart3"
+CONFIG_EC200X_POWER_PIN=-1
+CONFIG_EC200X_STATUS_PIN=-1
+CONFIG_EC200X_WAKEUP_PIN=-1
+CONFIG_EC200X_RECV_BUFF_LEN=512
+CONFIG_EC200X_PWREN_PIN=40
+CONFIG_EC200X_PWRKEY_PIN=39
 CONFIG_BSP_USING_SPI_FLASH=y
 # CONFIG_BSP_USING_NAND1 is not set
 # CONFIG_BSP_USING_RGB is not set
