--- a/bsp/stm32/stm32f103-atn-chkgv2/board/SConscript
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/SConscript
@@ -25,6 +25,10 @@ if GetDepend(['FAL_USING_SFUD_PORT']):
 if GetDepend(['BSP_USING_SDCARD']):
     src += Glob('ports/sdcard_port.c')
 
+if GetDepend(['BSP_USING_AT_CAT1']):
+    if GetDepend(['AT_DEVICE_USING_EC200X']):
+        src += Glob('ports/at_sample_ec200x.c')
+
 path =  [cwd]
 path += [cwd + '/CubeMX_Config/Inc']
 path += [cwd + '/ports']
