[bsp/chkgv2] add rs485 and dlt645 support

--- a/bsp/stm32/stm32f103-atn-chkgv2/.config
+++ b/bsp/stm32/stm32f103-atn-chkgv2/.config
@@ -316,7 +316,7 @@ CONFIG_ULOG_LINE_BUF_SIZE=128
 #
 # log format
 #
-# CONFIG_ULOG_OUTPUT_FLOAT is not set
+CONFIG_ULOG_OUTPUT_FLOAT=y
 CONFIG_ULOG_USING_COLOR=y
 CONFIG_ULOG_OUTPUT_TIME=y
 CONFIG_ULOG_TIME_USING_TIMESTAMP=y
@@ -450,7 +450,22 @@ CONFIG_PKG_OTA_DOWNLOADER_VER="latest"
 # CONFIG_PKG_USING_LIBRWS is not set
 # CONFIG_PKG_USING_TCPSERVER is not set
 # CONFIG_PKG_USING_PROTOBUF_C is not set
-# CONFIG_PKG_USING_DLT645 is not set
+CONFIG_PKG_USING_DLT645=y
+CONFIG_PKG_DLT645_PATH="/packages/iot/dlt645"
+# CONFIG_PKG_USING_DLT645_V001 is not set
+CONFIG_PKG_USING_DLT645_LATEST_VERSION=y
+CONFIG_PKG_DLT645_VER="latest"
+
+#
+# dlt645 Options
+#
+# CONFIG_DLT645_USING_SAMPLE is not set
+CONFIG_DLT645_USING_RS485=y
+CONFIG_DLT645_SERIAL_NAME="uart5"
+CONFIG_DLT645_SERIAL_BAUDRATE=2400
+CONFIG_DLT645_SERIAL_PARITY=2
+CONFIG_DLT645_RS485_DE_PIN=8
+CONFIG_DLT645_RS485_TX_LVL=1
 # CONFIG_PKG_USING_QXWZ is not set
 # CONFIG_PKG_USING_SMTP_CLIENT is not set
 # CONFIG_PKG_USING_ABUP_FOTA is not set
@@ -525,7 +540,6 @@ CONFIG_PKG_OTA_DOWNLOADER_VER="latest"
 # LVGL: powerful and easy-to-use embedded GUI library
 #
 # CONFIG_PKG_USING_LVGL is not set
-# CONFIG_PKG_USING_LITTLEVGL2RTT is not set
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 
@@ -629,6 +643,7 @@ CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 # CONFIG_PKG_USING_ARMV7M_DWT_TOOL is not set
 # CONFIG_PKG_USING_VOFA_PLUS is not set
 # CONFIG_PKG_USING_RT_TRACE is not set
+# CONFIG_PKG_USING_ZDEBUG is not set
 
 #
 # system packages
@@ -639,7 +654,15 @@ CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 #
 # CONFIG_PKG_USING_RT_MEMCPY_CM is not set
 # CONFIG_PKG_USING_RT_KPRINTF_THREADSAFE is not set
-# CONFIG_PKG_USING_RT_VSNPRINTF_FULL is not set
+CONFIG_PKG_USING_RT_VSNPRINTF_FULL=y
+CONFIG_PKG_RT_VSNPRINTF_FULL_PATH="/packages/system/enhanced-kservice/rt_vsnprintf_full"
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_SPRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_SNPRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_PRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_VSPRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_VSNPRINTF is not set
+CONFIG_PKG_USING_RT_VSNPRINTF_FULL_LATEST_VERSION=y
+CONFIG_PKG_RT_VSNPRINTF_FULL_VER="latest"
 
 #
 # acceleration: Assembly language or algorithmic acceleration packages
@@ -665,6 +688,7 @@ CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 # CONFIG_PKG_USING_UC_COMMON is not set
 # CONFIG_PKG_USING_UC_MODBUS is not set
 # CONFIG_PKG_USING_FREERTOS_WRAPPER is not set
+# CONFIG_PKG_USING_LITEOS_SDK is not set
 # CONFIG_PKG_USING_CAIRO is not set
 # CONFIG_PKG_USING_PIXMAN is not set
 # CONFIG_PKG_USING_PARTITION is not set
@@ -701,6 +725,7 @@ CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 # CONFIG_PKG_USING_AGILE_UPGRADE is not set
 # CONFIG_PKG_USING_FLASH_BLOB is not set
 # CONFIG_PKG_USING_MLIBC is not set
+# CONFIG_PKG_USING_TASK_MSG_BUS is not set
 
 #
 # peripheral libraries and drivers
@@ -837,7 +862,22 @@ CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 # CONFIG_PKG_USING_DM9051 is not set
 # CONFIG_PKG_USING_SSD1306 is not set
 # CONFIG_PKG_USING_QKEY is not set
-# CONFIG_PKG_USING_RS485 is not set
+CONFIG_PKG_USING_RS485=y
+CONFIG_PKG_RS485_PATH="/packages/peripherals/rs485"
+# CONFIG_RS485_USING_TEST is not set
+CONFIG_RS485_USING_SAMPLE_MASTER=y
+CONFIG_RS485_SAMPLE_MASTER_SERIAL="uart5"
+CONFIG_RS485_SAMPLE_MASTER_BAUDRATE=2400
+CONFIG_RS485_SAMPLE_MASTER_PARITY=1
+CONFIG_RS485_SAMPLE_MASTER_PIN=8
+CONFIG_RS485_SAMPLE_MASTER_LVL=1
+# CONFIG_RS485_USING_SAMPLE_SLAVE is not set
+CONFIG_PKG_USING_RS485_LATEST_VERSION=y
+# CONFIG_PKG_USING_RS485_V103 is not set
+# CONFIG_PKG_USING_RS485_V102 is not set
+# CONFIG_PKG_USING_RS485_V101 is not set
+# CONFIG_PKG_USING_RS485_V100 is not set
+CONFIG_PKG_RS485_VER="latest"
 # CONFIG_PKG_USING_RS232 is not set
 # CONFIG_PKG_USING_NES is not set
 # CONFIG_PKG_USING_VIRTUAL_SENSOR is not set
@@ -891,6 +931,7 @@ CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 # CONFIG_PKG_USING_UKAL is not set
 # CONFIG_PKG_USING_DIGITALCTRL is not set
 # CONFIG_PKG_USING_KISSFFT is not set
+# CONFIG_PKG_USING_CMSIS_DSP is not set
 
 #
 # miscellaneous packages
@@ -1113,6 +1154,7 @@ CONFIG_PKG_ULOG_EASYFLASH_VER="latest"
 #
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_GFX_LIBRARY is not set
 # CONFIG_PKG_USING_ARDUINO_U8G2 is not set
+# CONFIG_PKG_USING_ARDUINO_TFT_ESPI is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ST7735 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SSD1306 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ILI9341 is not set
@@ -1186,7 +1228,6 @@ CONFIG_SOC_STM32F103RE=y
 # Onboard Peripheral Drivers
 #
 CONFIG_BSP_USING_USB_TO_USART=y
-# CONFIG_BSP_USING_RS485_OR_RS232 is not set
 CONFIG_BSP_USING_AT_CAT1=y
 CONFIG_EC200X_CLIENT_NAME="uart3"
 CONFIG_EC200X_POWER_PIN=-1
@@ -1195,6 +1236,7 @@ CONFIG_EC200X_WAKEUP_PIN=-1
 CONFIG_EC200X_RECV_BUFF_LEN=512
 CONFIG_EC200X_PWREN_PIN=40
 CONFIG_EC200X_PWRKEY_PIN=39
+CONFIG_BSP_USING_RS485_DLT645=y
 CONFIG_BSP_USING_SPI_FLASH=y
 # CONFIG_BSP_USING_NAND1 is not set
 # CONFIG_BSP_USING_RGB is not set
@@ -1214,6 +1256,8 @@ CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_USING_UART2 is not set
 CONFIG_BSP_USING_UART3=y
 # CONFIG_BSP_UART3_RX_USING_DMA is not set
+# CONFIG_BSP_USING_UART4 is not set
+CONFIG_BSP_USING_UART5=y
 CONFIG_BSP_USING_ON_CHIP_FLASH=y
 CONFIG_BSP_USING_SPI=y
 CONFIG_BSP_USING_SPI1=y
